--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "tsnieman-personal-blog",
+  "name": "react-omega-boilerplate",
   "version": "0.0.0",
-  "description": "Personal blog for Tyler Nieman (tsnieman).",
+  "description": "Personal React boilerplate for Tyler Nieman (tsnieman).",
   "scripts": {
     "clean": "rm -rf ./dist/",
     "build:dev": "npm run clean",
     "build:prod": "npm run clean && webpack --config webpack.config.js -p",
     "start": "npm run build:dev && NODE_ENV=development node devServer.js"
   },
-  "homepage": "http://rackt.github.io/redux",
+  "homepage": "https://github.com/tsnieman/react-omega-boilerplate",
   "dependencies": {
     "babel-runtime": "^6.9.2",
     "isomorphic-fetch": "^2.2.1",
@@ -18,10 +18,8 @@
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-hot-loader": "^3.0.0-beta.0",
-    "react-leaflet": "0.12.1",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
-    "redux-thunk": "^2.1.0",
     "webfontloader": "^1.6.26"
   },
   "devDependencies": {
