--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "clean": "rm -rf ./dist/",
     "build:dev": "npm run clean",
     "build:prod": "npm run clean && webpack --config webpack.config.js -p",
-    "start": "npm run build:dev && NODE_ENV=development node devServer.js"
+    "start": "npm run build:dev && NODE_ENV=development node devServer.js",
+    "tests": "mocha ./test/setup.js ./test/tests.js"
   },
   "homepage": "https://github.com/tsnieman/react-omega-boilerplate",
   "dependencies": {
@@ -32,7 +33,11 @@
     "babel-preset-es2015-loose": "^6.1.4",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-register": "^6.11.5",
+    "chai": "^3.5.0",
     "css-loader": "^0.23.1",
+    "css-modules-require-hook": "^4.0.1",
+    "enzyme": "^2.4.1",
     "eslint": "^2.13.1",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-import-resolver-webpack": "^0.4.0",
@@ -41,6 +46,9 @@
     "eslint-plugin-jsx-a11y": "^1.5.5",
     "eslint-plugin-react": "^5.2.2",
     "file-loader": "^0.9.0",
+    "jsdom": "^9.4.1",
+    "mocha": "^2.5.3",
+    "nock": "^8.0.0",
     "node-libs-browser": "^1.0.0",
     "postcss-advanced-variables": "^1.2.2",
     "postcss-color-function": "^2.0.1",
@@ -50,6 +58,7 @@
     "postcss-loader": "^0.9.1",
     "postcss-mixins": "^5.0.0",
     "postcss-nested": "^1.0.0",
+    "react-addons-test-utils": "^15.2.1",
     "react-css-modules": "^3.7.8",
     "react-router": "^2.6.0",
     "react-router-redux": "^4.0.5",
@@ -58,7 +67,9 @@
     "redux-devtools-dock-monitor": "^1.1.1",
     "redux-devtools-log-monitor": "^1.0.11",
     "redux-saga": "^0.11.0",
+    "sinon": "^1.17.4",
     "style-loader": "^0.13.1",
+    "superagent": "^2.1.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.12.1"
