--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "clean": "rm -rf ./dist/",
     "build:dev": "npm run clean",
     "build:prod": "npm run clean && webpack --config webpack.config.js -p",
-    "start": "npm run build:dev && NODE_ENV=development node devServer.js",
-    "tests": "mocha ./test/setup.js ./test/tests.js"
+    "start": "npm run build:dev && NODE_ENV=development node ./devServer.js",
+    "tests": "mocha ./test/setup.js ./test/tests.js",
+    "test": "NODE_ENV=test BABEL_DISABLE_CACHE=1 jest --no-cache --watch"
   },
   "homepage": "https://github.com/tsnieman/react-omega-boilerplate",
   "dependencies": {
@@ -24,10 +25,13 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.3.7",
+    "babel-cli": "^6.11.4",
     "babel-core": "^6.11.4",
     "babel-eslint": "^6.1.2",
+    "babel-jest": "^13.2.2",
     "babel-loader": "^6.2.4",
     "babel-plugin-react-transform": "^2.0.2",
+    "babel-plugin-webpack-loaders": "^0.7.0",
     "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-es2015-loose": "^6.1.4",
@@ -46,6 +50,7 @@
     "eslint-plugin-jsx-a11y": "^1.5.5",
     "eslint-plugin-react": "^5.2.2",
     "file-loader": "^0.9.0",
+    "jest-cli": "^13.2.3",
     "jsdom": "^9.4.1",
     "mocha": "^2.5.3",
     "nock": "^8.0.0",
@@ -73,5 +78,23 @@
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.12.1"
+  },
+  "jest": {
+    "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
+    "moduleDirectories": [
+      "node_modules",
+      "src"
+    ],
+    "unmockedModulePathPatterns": [
+      "react",
+      "react-dom",
+      "react-addons-test-utils",
+      "fbjs",
+      "enzyme",
+      "lodash"
+    ],
+    "modulePaths": [
+      "/src"
+    ]
   }
 }
