--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^15.3.0",
     "react-hot-loader": "^3.0.0-beta.0",
     "react-redux": "^4.4.5",
+    "recompose": "^0.20.2",
     "redux": "^3.5.2",
     "webfontloader": "^1.6.26"
   },
