--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-css-modules": "^3.7.9",
     "react-router": "^2.6.1",
     "react-router-redux": "^4.0.5",
+    "react-test-renderer": "^15.3.1",
     "redbox-react": "^1.2.10",
     "redux-devtools": "^3.3.1",
     "redux-devtools-dock-monitor": "^1.1.1",
