--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-addons-css-transition-group": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-hot-loader": "^3.0.0-beta.5",
-    "react-redux": "^4.4.5",
+    "react-redux": "v5.0.0-beta.3",
     "recompose": "^0.20.2",
     "redux": "^3.6.0",
     "shortid": "^2.2.6",
