--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,7 @@
 {
   // https://github.com/babel/babel-loader#options
   // cacheDirectory: true,
-  "presets": ['es2015-loose', 'stage-0', 'react'],
+  "presets": ['es2015', 'stage-0', 'react'],
 
   "env": {
     // only enable when process.env.NODE_ENV is 'development' or undefined
@@ -13,6 +13,13 @@
 
     "test": {
       "plugins": [
+        [
+          "transform-runtime",
+          {
+            "polyfill": false,
+            "regenerator": true
+          }
+        ],
         [
           "babel-plugin-webpack-loaders",
           {
