--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build:dev": "npm run clean",
     "build:prod": "npm run clean && webpack --config webpack.config.js -p",
     "start": "npm run build:dev && NODE_ENV=development node ./devServer.js",
-    "test": "NODE_ENV=test BABEL_DISABLE_CACHE=1 jest --no-cache",
+    "test": "NODE_ENV=test BABEL_DISABLE_CACHE=1 jest --no-cache ",
     "test:watch": "npm run test -- --watch"
   },
   "homepage": "https://github.com/tsnieman/react-omega-boilerplate",
@@ -35,8 +35,9 @@
     "babel-jest": "^18.0.0",
     "babel-loader": "^6.2.5",
     "babel-plugin-react-transform": "^2.0.2",
+    "babel-plugin-transform-runtime": "^6.15.0",
     "babel-plugin-webpack-loaders": "^0.8.0",
-    "babel-polyfill": "^6.16.0",
+    "babel-polyfill": "^6.20.0",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-es2015-loose": "^8.0.0",
     "babel-preset-react": "^6.16.0",
