--- a/package.json
+++ b/package.json
@@ -68,8 +68,7 @@
     "postcss-nested": "^1.0.0",
     "react-addons-test-utils": "^15.3.2",
     "react-css-modules": "^4.1.0",
-    "react-router": "^2.8.1",
-    "react-router-redux": "^4.0.6",
+    "react-router": "^v4.0.0-alpha.6",
     "react-test-renderer": "^15.3.2",
     "redbox-react": "^1.3.1",
     "redux-devtools": "^3.3.1",
