--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react": "^15.3.2",
     "react-addons-css-transition-group": "^15.3.2",
     "react-dom": "^15.3.2",
-    "react-hot-loader": "^3.0.0-beta.5",
+    "react-hot-loader": "3.0.0-beta.6",
     "react-redux": "^5.0.1",
     "recompose": "^0.21.2",
     "redux": "^3.6.0",
